Java version downgraded to 1.8 to attend Heroku requirement